--- a/world/kwallet/PKGBUILD
+++ b/world/kwallet/PKGBUILD
@@ -3,13 +3,14 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kwallet
-pkgver=6.13.0
+pkgver=6.14.0
 pkgrel=1
 pkgdesc='Secure and unified container for user passwords'
 arch=(x86_64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL-2.0-only LGPL-3.0-only)
 depends=(gcc-libs
+         glib2
          glibc
          gpgme
          kcolorscheme
@@ -22,6 +23,7 @@ depends=(gcc-libs
          kwidgetsaddons
          kwindowsystem
          libgcrypt
+         libsecret
          qca-qt6
          qt6-base)
 makedepends=(doxygen
@@ -34,7 +36,7 @@ optdepends=('kwalletmanager: Configuration GUI')
 provides=(org.freedesktop.secrets)
 groups=(kf6)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('1a6ff2ccf660a433bda6b00ac873796dcb46bd2443787fcf5fbe4c433ca8cb36'
+sha256sums=('a7477e4e5e7ccb43491c5a0eccadf6a33e962088d5af32c4b6b4aacb920f59e3'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.org>
               E0A3EB202F8E57528E13E72FD7574483BB57B18D # Jonathan Esk-Riddell <jr@jriddell.org>
