--- a/galaxy/libsidplayfp/.artixlinux/pkgbase.yaml
+++ b/galaxy/libsidplayfp/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: libsidplayfp
-  version: 2.13.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - libsidplayfp
 actions:
   addRepo: galaxy
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 2.13.1-1
+    version: 2.14.0-1
     packages:
-      - libsidplayfp-2.13.1-1-x86_64.pkg.tar.zst
+      - libsidplayfp-2.14.0-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
