--- a/galaxy/moksha-module-mail/.artixlinux/pkgbase.yaml
+++ b/galaxy/moksha-module-mail/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: galaxy
-pkgbase:
-  name: moksha-module-mail
-  version: 0.1.1-5
-  arch:
-    - x86_64
-  pkgname:
-    - moksha-module-mail
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 0.1.1-5
+    version: 0.1.1-5.1
     packages:
-      - moksha-module-mail-0.1.1-5-x86_64.pkg.tar.zst
+      - moksha-module-mail-0.1.1-5.1-x86_64.pkg.tar.zst
+    debug: []
