--- a/galaxy/moksha-module-winselector/.artixlinux/pkgbase.yaml
+++ b/galaxy/moksha-module-winselector/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: galaxy
-pkgbase:
-  name: moksha-module-winselector
-  version: 0.1.1-3.1
-  arch:
-    - x86_64
-  pkgname:
-    - moksha-module-winselector
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 0.1.1-3.1
+    version: 0.1.1-3.2
     packages:
-      - moksha-module-winselector-0.1.1-3.1-x86_64.pkg.tar.zst
+      - moksha-module-winselector-0.1.1-3.2-x86_64.pkg.tar.zst
+    debug: []
