--- a/world/ruby-mime-types-data/.artixlinux/pkgbase.yaml
+++ b/world/ruby-mime-types-data/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
 team: world
-pkgbase:
-  name: ruby-mime-types-data
-  version: 3.2025.0429-1
-  arch:
-    - any
-  pkgname:
-    - ruby-mime-types-data
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 3.2025.0429-1
+    version: 3.2025.0507-1
     packages:
-      - ruby-mime-types-data-3.2025.0429-1-any.pkg.tar.zst
+      - ruby-mime-types-data-3.2025.0507-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
