--- a/world/gcc14/.artixlinux/pkgbase.yaml
+++ b/world/gcc14/.artixlinux/pkgbase.yaml
@@ -1,14 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: gcc14
-  version: 14.2.1+r753+g1cd744a6828f-2
-  arch:
-    - x86_64
-  pkgname:
-    - gcc14
-    - gcc14-libs
-    - gcc14-fortran
 actions:
   addRepo: world
   removeRepo: null
@@ -21,39 +12,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 14.2.1+r753+g1cd744a6828f-2
+    version: 14.2.1+r753+g1cd744a6828f-3
     packages:
-      - gcc14-14.2.1+r753+g1cd744a6828f-2-x86_64.pkg.tar.zst
-      - gcc14-libs-14.2.1+r753+g1cd744a6828f-2-x86_64.pkg.tar.zst
-      - gcc14-fortran-14.2.1+r753+g1cd744a6828f-2-x86_64.pkg.tar.zst
+      - gcc14-14.2.1+r753+g1cd744a6828f-3-x86_64.pkg.tar.zst
+      - gcc14-libs-14.2.1+r753+g1cd744a6828f-3-x86_64.pkg.tar.zst
+      - gcc14-fortran-14.2.1+r753+g1cd744a6828f-3-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
